<resources>
    <string name="app_name">Theo dõi việc làm từ xa</string>

    <string name="search_notes">Tìm kiếm ghi chú</string>
    <string name="save">Save</string>
    <string name="type_a_title_here">Nhập tiêu đề</string>
    <string name="note_subtitle">Ghi chú</string>
    <string name="note_fields_required">Phụ đề ghi chú và mô tả ghi chú là bắt buộc.</string>
    <string name="note_title_required">Tiêu đề ghi chú là bắt buộc</string>
    <string name="note_description">Ghi chú Mô tả</string>
    <string name="permission_denied">Quyền bị Từ chối</string>
    <string name="permission_granted">Đã được cho phép</string>
    <string name="link_url_empty">URL không được để trống. Vui lòng nhập một URL hợp lệ.</string>
    <string name="invalid_url">Vui lòng nhập một URL hợp lệ.</string>
    <string name="link_url">Link URL</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="add_link">Thêm đường dẫn</string>
    <string name="attached_links">Liên kết đính kèm</string>
    <string name="note_deleted">Ghi chú đã bị xóa</string>
    <string name="delete">Xóa ghi chú</string>
    <string name="share">Chia sẻ</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="share_note">Chia sẻ chú thích</string>
    <string name="lock">Tạo mật khẩu</string>
    <string name="speak_notes">Nói với ghi chú tìm kiếm</string>
    <string name="home">Home</string>
    <string name="rate_us">Đánh giá chúng tôi</string>
    <string name="settings">Cài đặt</string>
    <string name="feedback">Gửi thông tin phản hồi</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="terms_of_use">Điều khoản sử dụng</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">About</string>
    <string name="share_description">Chia sẻ ứng dụng với bạn bè của bạn</string>
    <string name="feedback_subject"> Hãy cho chúng tôi biết chúng tôi có thể làm gì để cải thiện trải nghiệm của bạn với ứng dụng của chúng tôi</string>
    <string name="gmail_not_installed">Ứng dụng Gmail chưa được cài đặt trên thiết bị của bạn</string>
    <string name="fullscreen_mode">Toàn màn hình</string>
    <string name="screen_on_mode">Screen on Mode</string>
    <string name="edit_category">Chỉnh sửa danh mục</string>
    <string name="category_deleted">Thêm thể loại</string>
    <string name="category_title">Tiêu đề danh mục</string>
    <string name="category_added">Đã thêm danh mục</string>
    <string name="category_edited">Đã chỉnh sửa danh mục</string>
    <string name="category_is_selected">danh mục được chọn</string>
    <string name="all">All</string>
    <string name="choose_category">Chọn danh mục</string>
    <string name="category">Loại</string>
    <string name="save_note_before_share">Đảm bảo lưu ghi chú trước khi chia sẻ</string>
    <string name="new_category">Mới</string>
    <string name="attach_link">Đính kèm liên kết</string>
    <string name="attach_image">Đính kèm hình ảnh</string>
    <string name="move_to_trash">Di chuyển vào thùng rác</string>
    <string name="trash">Thùng Rác</string>
    <string name="note_discarded">Ghi chú đã bị loại bỏ</string>
    <string name="note_moved_to_trash">Đã chuyển ghi chú vào thùng rác</string>
    <string name="archive">Lưu trữ</string>
    <string name="create_your_first_note">Tạo ghi chú đầu tiên của bạn</string>
    <string name="there_are_no_notes_in_this_category">Không có ghi chú nào trong danh mục này.</string>
    <string name="delete_note">Xóa ghi chú</string>
    <string name="restore_from_trash">Khôi phục từ thùng rác</string>
    <string name="note_restored">Đã khôi phục ghi chú từ thùng rác</string>
    <string name="note_deleted_permanently">Ghi chú đã bị xóa vĩnh viễn</string>
    <string name="there_are_no_notes_in_trash">Không có ghi chú nào trong thùng rác</string>
    <string name="delete_all">Xóa hết</string>
    <string name="there_are_no_notes_in_archive">Không có ghi chú nào trong kho lưu trữ</string>
    <string name="save_note_before_archive">Đảm bảo lưu ghi chú trước khi lưu trữ</string>
    <string name="note_archived">Ghi chú của bạn đã được lưu trữ thành công</string>
    <string name="unarchive">Hủy lưu trữ</string>
    <string name="note_restored_from_archive">Ghi chú của bạn đã được khôi phục từ kho lưu trữ</string>
    <string name="add_new_category"> Thêm danh mục mới</string>
    <string name="any_notes_to_add_add_your_first_note_by_clicking_on_add_button">Có ghi chú nào để thêm không? Thêm ghi chú đầu tiên của bạn bằng cách nhấp vào nút thêm.</string>
    <string name="any_tasks_to_add_add_your_first_todo_task_by_clicking_on_add_button">Bất kỳ nhiệm vụ để thêm? Thêm công việc cần làm đầu tiên của bạn bằng cách nhấp vào nút thêm.</string>
    <string name="popup_cancel">Hủy bỏ</string>
    <string name="popup_confirm">Xác nhận</string>
    <string name="delete_all_notes">Xóa tất cả ghi chú</string>
    <string name="delete_all_notes_description">Bạn có chắc chắn muốn xóa tất cả các ghi chú vĩnh viễn không?</string>
    <string name="tap_again_to_exit">Nhấn lại để thoát</string>
    <string name="add_note">Thêm chú thích</string>
    <string name="reminder_set_successfully">Đã đặt lời nhắc thành công. Lưu ghi chú để áp dụng các thay đổi.</string>
    <string name="note_title_subtitle_empty">Tiêu đề ghi chú và phụ đề ghi chú không được để trống</string>
    <string name="note_saved">Ghi chú được lưu thành công</string>
    <string name="reminder_set_at">Lời nhắc được đặt lúc:</string>
    <string name="reminders">Lời nhắc</string>
    <string name="add_reminder">Thêm lời nhắc</string>
    <string name="remove_reminder">Xóa lời nhắc</string>
    <string name="reminder_removed">Đã xóa lời nhắc</string>
    <string name="failed_to_remove_reminder">Không xóa được lời nhắc. Vui lòng liên hệ với bộ phận hỗ trợ!</string>
    <string name="there_are_no_notes_in_reminder">Không có ghi chú nào trong lời nhắc</string>
    <string name="set_your_passcode">Đặt mật mã của bạn</string>
    <string name="enter_four_digit_passcode">Nhập mật mã gồm 4 chữ số</string>
    <string name="select">Lựa chọn</string>
    <string name="select_note_for_action">Trước tiên, bạn cần chọn một ghi chú trước khi thực hiện hành động</string>
    <string name="selected">Đã chọn</string>
    <string name="remove_image">Xóa hình ảnh</string>
    <string name="remove_video">Xóa Video</string>
    <string name="remove_image_description">Bạn có chắc chắn muốn xóa hình ảnh đính kèm không?</string>
    <string name="remove_video_description">Bạn có chắc chắn muốn xóa video đính kèm không?</string>
    <string name="select_from_gallery">Chọn từ thư viện</string>
    <string name="widget">Widget</string>
    <string name="notifications">Thông báo</string>
    <string name="select_a_widget_to_add_to_home_screen_automatically">Chọn một widget để tự động thêm vào màn hình chính</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="name_a_z">Name A - Z</string>
    <string name="popup_ok">OK</string>
    <string name="name_z_a">Name Z - A</string>
    <string name="sort_by_default">Sort by Default</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="login_with_fingerprint">Login with Fingerprint</string>
    <string name="select_video_from_gallery">Select video from gallery</string>
    <string name="share_image">Share Image</string>
    <string name="types">Types</string>
    <string name="colors">Colors</string>

    <string name="note_pin_code">Mật khẩu Pin</string>
    <string name="enter_new_pin_code">Nhập Pincode mới</string>
    <string name="pin_code_empty">Mã pin không được để trống</string>
    <string name="note_locked">Note locked</string>
    <string name="pin_code_set">Đã đặt mã pin thành công</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="note_unlocked">Note Unlocked</string>
    <string name="unlock">Unlock</string>
    <string name="save_note_before_lock">Đảm bảo lưu ghi chú trước khi khóa</string>
    <string name="remove_pin">Remove Pin</string>
    <string name="update_pin">Update Pin</string>
    <string name="verify_pin_code">Verify Pin Code</string>
    <string name="pin_code_unset">Pin code removed successfully</string>
    <string name="reader_mode">Read Mode</string>
    <string name="close_reader_mode">Close Reader Mode</string>
    <string name="copy">Sao chép nội dung</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="export_as">Export As</string>
    <string name="export_note_as">Export Note As</string>
    <string name="export_as_txt">Export as .txt file</string>
    <string name="export_as_csv">Export as .csv file</string>
    <string name="saved_to">Saved to</string>
    <string name="speech_input">Giọng nói</string>
    <string name="there_are_no_notifications_yet">Không có thông báo nào được nêu ra</string>
    <string name="save_note_before_copy">Đảm bảo lưu ghi chú trước khi sao chép</string>
    <string name="save_note_before_export">Đảm bảo lưu ghi chú trước khi xuất</string>
    <string name="save_note_before_speech">Make sure to save note before speech</string>
    <string name="save_note_before_open_reader_mode">Make sure to save note before open reader mode</string>
    <string name="notes">Notes</string>
    <string name="uncompleted">Uncompleted</string>
    <string name="completed">Completed</string>
    <string name="mark_completed">Mark Completed</string>
    <string name="mark_uncompleted">Mark Uncompleted</string>
    <string name="enter_title">Enter title</string>
    <string name="add_details">Add Details</string>
    <string name="todo_title_required">Todo title can\'t be empty!</string>
    <string name="add_your_first_todo">Add your first todo</string>
    <string name="delete_all_completed_tasks">Delete all completed tasks</string>
    <string name="delete_all_completed_tasks_header">Delete all completed tasks?</string>
    <string name="delete_all_completed_tasks_description">completed tasks will be permanently deleted</string>

    <string name="create_new_list">Create new list</string>
    <string name="enter_list_title">Enter list title</string>
    <string name="todo_list_title_required">Todo list can\'t be empty</string>
    <string name="error_empty_list">Error while opening to-do list. Please try again later</string>
    <string name="move_task_to">Move task to</string>
    <string name="mark_as_important">Mark as Important</string>
    <string name="todo_moved_to">To-Do Moved to</string>
    <string name="there_are_no_todos_in_this_list">There is no to-dos in this list</string>
    <string name="add_category">Thêm danh mục</string>
    <string name="dangky">Nếu chưa có tài khoản ? Đăng ký</string>
    <string name="forgetpass">Quên mật khẩu ?</string>
    <string name="ttdk">Thông tin đăng ký</string>
    <string name="change">Đổi mật khẩu</string>
    <string name="logout">Đăng xuất</string>
    <string name="images">Images</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>