<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="41dp"
        android:layout_height="6dp"
        android:layout_marginTop="15dp"
        android:background="?divider_inline" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        android:baselineAligned="false">



        <LinearLayout
            android:id="@id/copy_to_clipboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="55dp"
                android:layout_height="55dp"

                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_copy"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/copy"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

        </LinearLayout>



        <LinearLayout
            android:id="@id/speech_to_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:cardBackgroundColor="?color_icon"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_speech"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/speech_input"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:cardBackgroundColor="?color_icon"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_share"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/share"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:baselineAligned="false">



        <LinearLayout
            android:id="@id/lock_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:cardBackgroundColor="?color_icon"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <ImageView

                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lock_icon_outline"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@id/lock_note_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lock"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

        </LinearLayout>



        <LinearLayout
            android:id="@id/delete_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:cardBackgroundColor="?color_icon"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/trash_icon_outline"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>