<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?color_background"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="?color_light_separate"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <ImageView
                android:id="@id/go_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?actionBarItemBackground"
                android:padding="4dp"
                android:src="@drawable/long_arrow_back"
                app:tint="@color/colorPrimary"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/settings"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">








                <LinearLayout
                    android:id="@id/pin_lock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/lock_icon_outline"
                        app:tint="@color/colorPrimary"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_pin_code"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@id/about_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/icon_info_outline"
                        app:tint="@color/colorPrimary"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/icon_lock_outline_2"
                        app:tint="@color/colorPrimary"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</RelativeLayout>