<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?color_background"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="?color_light_separate"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap">

                <ImageView
                    android:id="@id/go_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="?actionBarItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/long_arrow_back"
                    app:tint="?color_dark"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/note_pin_code"
                    android:textColor="?color_dark"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@id/pin_code_action"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_mini"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,SmallSp" />

        </RelativeLayout>

        <EditText
            android:id="@id/pin_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:digits="0123456789"
            android:maxLength="8"
            android:background="@drawable/input_rectangle_background"
            android:hint="@string/enter_new_pin_code"
            android:inputType="numberPassword"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textColor="?color_dark"
            android:textColorHint="?color_dark"
            android:textDirection="locale"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:ignore="Autofill" />

        <TextView
            android:id="@id/length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="end"
            android:text="0/8"
            android:textSize="12sp"
            android:textColor="?color_dark"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>