<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?color_background"
    tools:context=".activities.FilteredNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="?color_light_separate"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <ImageView
                android:id="@id/go_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?actionBarItemBackground"
                android:padding="4dp"
                android:src="@drawable/long_arrow_back"
                app:tint="@color/colorPrimaryDark"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@id/category_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/category_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@id/search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@id/search_bar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="6dp"
                android:layout_weight=".9"
                android:background="@drawable/input_round_background"
                android:hint="@string/search_notes"
                android:maxLines="1"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textDirection="locale"
                android:textSize="13sp"
                android:visibility="visible"
                tools:ignore="Autofill,RtlSymmetry,SmallSp,TextFields" />

            <ImageView
                android:id="@id/search_mic"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".1"
                android:background="?actionBarItemBackground"
                android:padding="6dp"
                android:src="@drawable/mic_icon"
                app:tint="@color/colorPrimaryDark"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@id/notes_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:visibility="visible" />

        <TextView
            android:id="@id/no_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:text="@string/there_are_no_notes_in_this_category"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>